# xenia.os

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEBT.md  Makefile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  railway.toml
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py
backend/app/ai/pipelines/: __init__.py  compose_brief.py  compose_opener.py  extract_page_evidence.py
backend/app/ai/prompts/: __init__.py  compose_brief.py  compose_opener.py  extract_page_evidence.py
backend/app/ai/providers/: __init__.py  base.py  openai_responses.py
backend/app/ai/validation/: __init__.py  l0.py  spans.py
backend/app/api/: __init__.py  deps.py  middleware.py
backend/app/api/internal/: __init__.py  console.py  deps.py  router.py  workbench.py
backend/app/api/v1/: __init__.py  billing.py  briefs.py  dna.py  drafts.py  health.py  interview.py  loop.py  me.py  router.py  stripe_webhook.py
backend/app/core/: __init__.py  config.py  db.py  errors.py  logging.py  observability.py
backend/app/domain/: __init__.py  audit.py  business_record.py  confidence.py  correction.py  decision.py  delegation.py  dna.py  evidence.py  golden_set.py  interview.py  outcome.py  prospect.py  recommendation.py  research_brief.py  rubric.py  rules.py  signal.py  suppression.py  user.py  workspace.py
backend/app/evaluation/: __init__.py  golden.py
backend/app/integrations/: __init__.py
backend/app/integrations/object_storage/: __init__.py  client.py
backend/app/integrations/resend/: __init__.py  client.py
backend/app/integrations/sources/: __init__.py  ad_library.py  canonical.py  companies_house.py  hiring.py  http_transport.py  politeness.py  websites.py
backend/app/integrations/stripe/: __init__.py  webhooks.py
backend/app/integrations/supabase_auth/: __init__.py  verifier.py
backend/app/repositories/: __init__.py  acquisition.py  audit.py  base.py  business_records.py  dna.py  drafts.py  evidence.py  flags.py  golden_set.py  identity.py  interview.py  jobs.py  knowledge.py  orm.py  prospects.py  recommendations.py  research_briefs.py  snapshots.py  teaching.py  users.py
backend/app/scripts/: __init__.py  export_openapi.py  fetch.py  rls_audit.py  seed.py  seed_e2e.py
backend/app/services/: __init__.py  acquire_footprint.py  ai_budget.py  apply_correction.py  assemble_queue.py  authenticate_user.py  author_research_brief.py  capture_evidence.py  capture_snapshot.py  compose_draft.py  compose_research_brief.py  compose_weekly_brief.py  compute_metrics.py  create_dna.py  create_prospect.py  decide_dna_proposal.py  derive_signals.py  extract_evidence.py  offboard_workspace.py  receive_stripe_webhook.py  record_decision.py  record_outcome.py  research_run.py  resolve_binding_review.py  resolve_entity.py  revert_dna_change.py  run_interview.py  send_heartbeat.py
backend/app/services/documents/: __init__.py  render_brief_pdf.py  render_dna_document.py  typeset.py
backend/app/workers/: __init__.py  handlers.py  main.py  schedules.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 20260720_0001_epic_1_foundations.py  20260720_0002_epic_3_research_workbench.py  20260720_0003_epic_4_source_ingestion.py  20260720_0004_epic_5_evidence_and_knowledge.py  20260720_0005_epic_7_rubric_scores.py  20260720_0006_epic_8_recommendations.py  20260720_0007_epic_9_golden_set.py  20260720_0008_epic_10_interview.py  20260720_0009_epic_11_mvp_mode.py
backend/tests/: conftest.py
backend/tests/ai/: test_compose_brief.py  test_extract_page_evidence.py  test_l0_battery.py
backend/tests/api/: test_auth_flow.py  test_console.py  test_errors.py  test_experience_phase2.py  test_health.py  test_interview_and_dna.py  test_loop.py  test_mvp_mode.py  test_offboarding.py  test_security_hardening.py  test_stripe_webhook.py  test_workbench.py
backend/tests/core/: test_config.py  test_logging.py
backend/tests/domain/: conftest.py  test_confidence.py  test_conflict_hierarchy.py  test_delegation.py  test_dna.py  test_dna_teaching.py  test_evidence.py  test_evidence_relations.py  test_prospect_and_rings.py  test_recommendation.py  test_research_brief.py  test_rubric.py  test_signal.py  test_suppression.py  test_teaching_shapes.py
backend/tests/fixtures/sources/: ad_library_response.json  careers_page.html  companies_house_filing_history.json  companies_house_profile.json  sitemap.xml  website_home.html  website_home_cleaned.txt
backend/tests/golden/: README.md  compose_brief_prompt_v1.txt  regenerate.py  weekly_brief_v1.txt
backend/tests/integrations/: test_adapters.py  test_politeness.py  test_stripe_signature.py  test_supabase_verifier.py
backend/tests/repositories/: test_flags.py  test_jobs.py  test_rings.py  test_rls.py  test_workspace_scoping.py
backend/tests/scripts/: test_seed.py
backend/tests/services/: test_acquire_footprint.py  test_ai_budget.py  test_authenticate_user.py  test_capture_snapshot.py  test_compose_and_qa_dial.py  test_evidence_pipeline.py  test_render_documents.py  test_research_run.py  test_resolve_entity.py  test_send_heartbeat.py  test_weekly_brief.py
backend/tests/workers/: test_worker.py  test_worker_tenancy.py
docs/: 01_FOUNDATION.md  02_ICP_AND_WEDGE_STRATEGY.md  03_PRODUCT_STRATEGY_AND_V1_SCOPE.md  04_INTELLIGENCE_AND_EVALUATION_STANDARD.md  05_DATA_KNOWLEDGE_AND_COMPLIANCE_STANDARD.md  06_BEHAVIOUR_INTERACTION_AND_EXPERIENCE_STANDARD.md  07_RESEARCH_AND_VALIDATION_PLAYBOOK.md  08_SYSTEM_ARCHITECTURE.md  09_SOURCE_INGESTION_AND_RESEARCH_PIPELINE.md  10_V1_BUILD_PLAN.md  11_V1_1_PRODUCT_EVOLUTION_PLAN.md  12_PRODUCT_MANIFESTO.md  13_PRODUCT_INTELLIGENCE.md
docs/adr/: 000-technical-architecture-summary.md  001-monorepo.md  002-frontend-router.md  003-openapi-codegen.md  README.md  (+12 more)
frontend/: .env.example  .gitignore  .prettierignore  components.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+118 files in other folders)
