[project]
name = "xenia-backend"
version = "0.1.0"
description = "Xenia backend — FastAPI modular monolith (API + worker)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    # Epic 1: Supabase JWT verification (HS256 secret + JWKS asymmetric keys).
    "pyjwt[crypto]>=2.10",
    # Epic 1: outbound HTTP for the Resend adapter. Already a transitive test dep.
    "httpx>=0.28",
    # Epic 3: S3-compatible object storage for snapshots/PDFs (ADR-004).
    "boto3>=1.43.51",
    # Epic 3: pure-Python PDF rendering for the workbench documents (no system deps).
    "fpdf2>=2.8.7",
    # Epic 3: error reporting from first deploy (ADR-005; DEBT.md repayment).
    "sentry-sdk[fastapi]>=2.66.0",
    # Epic 4: deterministic readability cleaning for the website adapter.
    "beautifulsoup4>=4.15.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "httpx>=0.28",
    "import-linter>=2.1",
    "pytest-cov>=7.1.0",
]

# ── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "C4",  # comprehensions
    "RUF", # ruff-specific
    "PL",  # pylint subset
    "PTH", # prefer pathlib
]
ignore = [
    "PLR0913", # many-args is a design review question, not a lint
]

[tool.ruff.lint.per-file-ignores]
# Magic values are fine in assertions; function-level imports are deliberate
# in fixtures (the app imports only after the environment is prepared);
# Depends-in-defaults is FastAPI's own idiom for override factories; the E2E
# flow tests legitimately run long.
"tests/**" = ["PLR2004", "PLC0415", "B008", "PLR0915"]

# ── mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
show_error_codes = true

# ── pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Starlette's TestClient emits this until its httpx2 migration settles;
    # it is upstream noise, not our code.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated.*",
]

# ── import-linter: AP2, the dependency direction as law (Doc 08 §1) ─────────

[tool.importlinter]
root_packages = ["app"]
include_external_packages = true

# The domain package imports nothing but itself and the standard library.
[[tool.importlinter.contracts]]
name = "Domain is pure (AP2)"
type = "forbidden"
source_modules = ["app.domain"]
forbidden_modules = [
    "app.api",
    "app.services",
    "app.repositories",
    "app.ai",
    "app.evaluation",
    "app.integrations",
    "app.workers",
    "app.core",
    "app.scripts",
    "fastapi",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "pydantic_settings",
    "openai",
    "jwt",
    "httpx",
]

# api → services → (repositories | ai | integrations | evaluation) → core → domain.
# Higher layers may import lower; never the reverse. Siblings are independent.
# Composition roots (app.main, app.scripts) sit outside the layer law — they
# wire the application together and may import anything.
[[tool.importlinter.contracts]]
name = "Layered architecture (AP2)"
type = "layers"
containers = []
layers = [
    "app.api | app.workers",
    "app.services",
    "app.repositories | app.ai | app.integrations | app.evaluation",
    "app.core",
    "app.domain",
]
